--- a/php.ini
+++ b/php.ini
@@ -2,6 +2,8 @@
 driver = 'mysql'        ; this will be mounted in the class constructor into a dsn string
 host = 'localhost'
 port = 3306
-schema = 'bookshelf'
+schema = 'avii_desenvweb'
 username = 'root'
 password = ''
+
+;mudar pra um arquivo config.php
