Added book page; Updated main page; Updated User Page

--- a/php.ini
+++ b/php.ini
@@ -4,6 +4,6 @@ host = 'localhost'
 port = 3306
 schema = 'avii_desenvweb'
 username = 'root'
-password = ''
+password = 'root'
 
 ;mudar pra um arquivo config.php
